--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
+    id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs'
+}
+
+kapt {
+    correctErrorTypes = true
 }
 
 android {
@@ -10,11 +18,15 @@ android {
     defaultConfig {
         applicationId "divyansh.tech.blocker"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
 
     buildTypes {
@@ -42,4 +54,81 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    //Kotlin
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.21"
+
+    //Epoxy For Complex Recycler View
+    implementation 'com.airbnb.android:epoxy:4.4.2'
+    implementation "com.airbnb.android:epoxy-databinding:4.4.2"
+    kapt 'com.airbnb.android:epoxy-processor:4.4.0'
+
+
+    //Navigation Components
+
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+
+    //Logging Library
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    //Tabs Library
+    implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
+
+    //Dependency Injection
+
+    implementation "com.google.dagger:hilt-android:2.32-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.32-alpha"
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0-beta01'
+
+    //Coroutines CORE
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
+
+    //FlexBoxLayout
+    implementation 'com.google.android:flexbox:2.0.1'
+
+    //Lottie for Animation
+    implementation 'com.airbnb.android:lottie:4.2.0'
+
+    //TestImplementations
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation 'androidx.test:core-ktx:1.3.0'
+    testImplementation 'androidx.test.ext:junit:1.1.2'
+
+    //Hilt Testing component
+    testImplementation 'com.google.dagger:hilt-android-testing:2.33-beta'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.32-alpha'
+
+    def room_version = "2.3.0"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+//    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    implementation "androidx.fragment:fragment-ktx:1.3.4"
+    //Android Test Implementations
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    androidTestImplementation 'org.mockito:mockito-android:3.2.4'
+    androidTestImplementation 'androidx.test:core:1.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.31.2-alpha'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.32-alpha'
+    debugImplementation "androidx.fragment:fragment-testing:1.3.0"
 }
