--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,4 +131,7 @@ dependencies {
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.31.2-alpha'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.32-alpha'
     debugImplementation "androidx.fragment:fragment-testing:1.3.0"
+
+    //permissions
+    implementation 'com.karumi:dexter:6.2.3'
 }
